wip: stuff with ntfy support
