# backend/internal/data/db/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.29.0
+//   sqlc v1.30.0
 
 package db
 
@@ -18,7 +18,7 @@ type FeedMessage struct {
 	RawHeaders     []byte
 	Title          *string
 	Message        *string
-	Level          *string
+	Priority       *int32
 	Logs           []string
 	Metadata       []byte
 	State          *string
@@ -37,7 +37,7 @@ type FeedMessagesView struct {
 	RawHeaders     []byte
 	Title          *string
 	Message        *string
-	Level          *string
+	Priority       *int32
 	Logs           []string
 	Metadata       []byte
 	State          *string
